trying to fix wierd bug only visible on deplyoment

--- a/src/styles/about.module.scss
+++ b/src/styles/about.module.scss
@@ -2,4 +2,5 @@
   background: linear-gradient(to bottom, #767979,  white);
   padding-top: 4rem;
   margin-top: 0;
+  text-align: center;
 }
